--- a/.envrc.template
+++ b/.envrc.template
@@ -2,4 +2,4 @@
 export WS_HOST="localhost"
 export WS_PORT="8080"
 export LOG_LEVEL="debug"
-export DB_URI="mongodb://localhost:27017"
+export DB_URI="mongodb://root:example@mongo:27017/"
