--- a/docker-compose.tests.yml
+++ b/docker-compose.tests.yml
@@ -42,6 +42,7 @@ services:
     ports:
       - "8082:8081"
     environment:
+      ME_CONFIG_MONGODB_SERVER: mongo
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
