export redis port

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,8 @@ services:
   redis:
     image: redis:7.0.4-alpine
     restart: always
+    ports:
+      - "6379:6379"
     volumes: 
       - db-data:/data
       - ./redis.conf:/usr/local/etc/redis/redis.conf
