--- a/docker-compose.tests.yml
+++ b/docker-compose.tests.yml
@@ -1,22 +1,26 @@
 version: "3.9"
 
 services:
-  eventrouter:
-    container_name: eventrouter
+  eventrouter_it:
+    container_name: eventrouter_it
     command: "./bin/start_event_router"
     env_file:
       - .envrc
-    environment: []
+    environment: 
+      DB_NAME: "codenames"
+      DB_URI: "redis_it:6379"
+      WS_HOST: "eventrouter_it"
+      WS_PORT: "8080"
     build:
       dockerfile: Dockerfile
       context: .    
     restart: always
     depends_on:
-      - redis
+      - redis_it
     networks:
       - tests
 
-  redis:
+  redis_it:
     image: redis:7.0.4-alpine
     restart: always
     networks:
@@ -29,31 +33,31 @@ services:
       - .envrc
     environment:
       DB_NAME: "codenames"
-      DB_URI: "redis:6379"
-      WS_HOST: "eventrouter"
+      DB_URI: "redis_it:6379"
+      WS_HOST: "eventrouter_it"
       WS_PORT: "8080"
     build:
       dockerfile: Dockerfile
       context: .    
     restart: "no"
     depends_on:
-      - redis
-      - eventrouter
+      - redis_it
+      - eventrouter_it
     networks:
       - tests
 
   init-redis:
     depends_on:
-      - redis
+      - redis_it
     image: redis:7.0.4-alpine
     restart: "no"
     volumes: 
       - ./internal/database/init_test/:/init_test/:ro
-    command: sh -c "cat /init_test/test_data.txt | redis-cli -h redis -p 6379 --pipe"
+    command: sh -c "cat /init_test/test_data.txt | redis-cli -h redis_it -p 6379 --pipe"
     networks:
       - tests
 
-  redis-insight:
+  redis-insight-it:
     image: redislabs/redisinsight:latest
     restart: always
     ports:
@@ -64,6 +68,3 @@ services:
 
 networks:
   tests:
-
-volumes:
-  test-db-data:
